# dotfiles

./: .clang-format  .editorconfig  .gitignore  Makefile  README.md  bootstrap.sh
_install/linux/: apt-list.txt  pacman-list.txt  setup.sh
_install/mac/: Brewfile  Brewfile.essential  brew-install.sh  setup.sh
_scripts/: check-stow-parents.sh
_setup/linux/: setup.sh
_setup/mac/: setup.sh
agents/: AGENTS.md
agents/.agents/rules/: karpathy-guidelines.md
agents/.agents/skills/commit-summarizer/: .gitignore  SKILL.md
agents/.agents/skills/commit-summarizer/scripts/: analyze_staged.py  test_analyze_staged.py
agents/.agents/skills/pdf2md-polish/: .gitignore  SKILL.md  config.json  polish.py  test_polish.py
agents/.agents/skills/pdf2md-polish/examples/: sample_input.md  sample_output.md  sample_prepass.md
agents/.agents/skills/pdf2md-polish/references/: abbreviation-table.md  formatting-rules.md  ocr-patterns.md
agents/.agents/skills/script-analyzer/: .gitignore  README.md  SKILL.md
agents/.agents/skills/script-analyzer/examples/: demo.sh  python_example.py  risky_script.sh  safe_script.sh  usage.sh
agents/.agents/skills/script-analyzer/scripts/: analyze.py  test_analyze.py
agents/.agents/workflows/: commit-summarizer.md
codestyle/: .editorconfig
git/: .gitconfig
nvim/.config/nvim/: init.lua  lazy-lock.json
proj-init/: README.md
proj-init/templates/common/: .gitattributes  .gitignore
proj-init/templates/cpp/: .clang-format
proj-init/templates/python/: pyproject.toml
proj-init/templates/rust/: .rustfmt.toml
ripgrep/: .ripgreprc
skills/commit-summarizer/: SKILL.md
tmux/: .tmux.conf
vim/: .vimrc
vscode/: settings.json
zsh/: .zshrc
zsh/.zsh.d/: brew_mirror.sh
